Fix input entries not working on touch devices. Update select field appearance for iOS. Center align button text for iOS

--- a/src/components/css/Button.module.css
+++ b/src/components/css/Button.module.css
@@ -5,13 +5,11 @@
 	justify-content: center;
 	min-width: 10rem;
 	border-radius: 4rem;
-	font-size: 1.75rem;
 	vertical-align: middle;
 	padding: 2rem;
 	color: #fff;
 	text-align: center;
 	text-shadow: 0 0 2px #000;
-	font-weight: bold;
 	border: 4px solid #2fd9b5;
 	background-color: #34404c;
 	margin: 0 10px 10px 0;
@@ -40,4 +38,12 @@
 	float: left;
 	width: auto;
 	padding-bottom: 100%;
+}
+
+.button {
+	font-size: 1.75rem;
+	font-weight: bold;
+
+	/* Prevent text selection by holding down on touch devices */
+	user-select: none;
 }
